user cross session anomaly detection

--- a/anomaly_detection_LOF.ipynb
+++ b/anomaly_detection_LOF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -312,6 +312,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>sessionIndex</th>\n",
+       "      <th>rep</th>\n",
        "      <th>H.period</th>\n",
        "      <th>DD.period.t</th>\n",
        "      <th>UD.period.t</th>\n",
@@ -320,8 +322,6 @@
        "      <th>UD.t.i</th>\n",
        "      <th>H.i</th>\n",
        "      <th>DD.i.e</th>\n",
-       "      <th>UD.i.e</th>\n",
-       "      <th>H.e</th>\n",
        "      <th>...</th>\n",
        "      <th>H.a</th>\n",
        "      <th>DD.a.n</th>\n",
@@ -362,6 +362,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>25.500000</td>\n",
        "      <td>0.093379</td>\n",
        "      <td>0.264148</td>\n",
        "      <td>0.170769</td>\n",
@@ -370,8 +372,6 @@
        "      <td>0.083358</td>\n",
        "      <td>0.081565</td>\n",
        "      <td>0.159372</td>\n",
-       "      <td>0.077806</td>\n",
-       "      <td>0.089138</td>\n",
        "      <td>...</td>\n",
        "      <td>0.106259</td>\n",
        "      <td>0.150670</td>\n",
@@ -386,6 +386,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
+       "      <td>2.291344</td>\n",
+       "      <td>14.431223</td>\n",
        "      <td>0.029626</td>\n",
        "      <td>0.220534</td>\n",
        "      <td>0.226836</td>\n",
@@ -394,8 +396,6 @@
        "      <td>0.125755</td>\n",
        "      <td>0.026887</td>\n",
        "      <td>0.226928</td>\n",
-       "      <td>0.228512</td>\n",
-       "      <td>0.030635</td>\n",
        "      <td>...</td>\n",
        "      <td>0.038828</td>\n",
        "      <td>0.107422</td>\n",
@@ -410,6 +410,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>0.001400</td>\n",
        "      <td>0.018700</td>\n",
        "      <td>-0.235800</td>\n",
@@ -418,8 +420,6 @@
        "      <td>-0.162100</td>\n",
        "      <td>0.003200</td>\n",
        "      <td>0.001400</td>\n",
-       "      <td>-0.160000</td>\n",
-       "      <td>0.002100</td>\n",
        "      <td>...</td>\n",
        "      <td>0.004000</td>\n",
        "      <td>0.001100</td>\n",
@@ -434,6 +434,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
+       "      <td>2.750000</td>\n",
+       "      <td>13.000000</td>\n",
        "      <td>0.074400</td>\n",
        "      <td>0.146900</td>\n",
        "      <td>0.049800</td>\n",
@@ -442,8 +444,6 @@
        "      <td>0.027200</td>\n",
        "      <td>0.062000</td>\n",
        "      <td>0.089300</td>\n",
-       "      <td>0.007400</td>\n",
-       "      <td>0.068600</td>\n",
        "      <td>...</td>\n",
        "      <td>0.082100</td>\n",
        "      <td>0.096100</td>\n",
@@ -458,6 +458,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>25.500000</td>\n",
        "      <td>0.089500</td>\n",
        "      <td>0.205950</td>\n",
        "      <td>0.108700</td>\n",
@@ -466,8 +468,6 @@
        "      <td>0.057800</td>\n",
        "      <td>0.077100</td>\n",
        "      <td>0.120900</td>\n",
-       "      <td>0.041200</td>\n",
-       "      <td>0.083400</td>\n",
        "      <td>...</td>\n",
        "      <td>0.101900</td>\n",
        "      <td>0.125000</td>\n",
@@ -482,6 +482,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
+       "      <td>6.250000</td>\n",
+       "      <td>38.000000</td>\n",
        "      <td>0.107900</td>\n",
        "      <td>0.306450</td>\n",
        "      <td>0.212400</td>\n",
@@ -490,8 +492,6 @@
        "      <td>0.096400</td>\n",
        "      <td>0.096900</td>\n",
        "      <td>0.173100</td>\n",
-       "      <td>0.093400</td>\n",
-       "      <td>0.102700</td>\n",
        "      <td>...</td>\n",
        "      <td>0.122300</td>\n",
        "      <td>0.174600</td>\n",
@@ -506,6 +506,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>50.000000</td>\n",
        "      <td>0.376100</td>\n",
        "      <td>12.506100</td>\n",
        "      <td>12.451700</td>\n",
@@ -514,8 +516,6 @@
        "      <td>4.799900</td>\n",
        "      <td>0.331200</td>\n",
        "      <td>25.987300</td>\n",
-       "      <td>25.915800</td>\n",
-       "      <td>0.325400</td>\n",
        "      <td>...</td>\n",
        "      <td>2.035300</td>\n",
        "      <td>3.327800</td>\n",
@@ -530,29 +530,29 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8 rows × 31 columns</p>\n",
+       "<p>8 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           H.period   DD.period.t   UD.period.t           H.t        DD.t.i  \\\n",
+       "       sessionIndex           rep      H.period   DD.period.t   UD.period.t  \\\n",
        "count  20400.000000  20400.000000  20400.000000  20400.000000  20400.000000   \n",
-       "mean       0.093379      0.264148      0.170769      0.085727      0.169085   \n",
-       "std        0.029626      0.220534      0.226836      0.027424      0.123546   \n",
-       "min        0.001400      0.018700     -0.235800      0.009300      0.001100   \n",
-       "25%        0.074400      0.146900      0.049800      0.066000      0.113600   \n",
-       "50%        0.089500      0.205950      0.108700      0.081000      0.140400   \n",
-       "75%        0.107900      0.306450      0.212400      0.099800      0.183900   \n",
-       "max        0.376100     12.506100     12.451700      0.241100      4.919700   \n",
+       "mean       4.500000     25.500000      0.093379      0.264148      0.170769   \n",
+       "std        2.291344     14.431223      0.029626      0.220534      0.226836   \n",
+       "min        1.000000      1.000000      0.001400      0.018700     -0.235800   \n",
+       "25%        2.750000     13.000000      0.074400      0.146900      0.049800   \n",
+       "50%        4.500000     25.500000      0.089500      0.205950      0.108700   \n",
+       "75%        6.250000     38.000000      0.107900      0.306450      0.212400   \n",
+       "max        8.000000     50.000000      0.376100     12.506100     12.451700   \n",
        "\n",
-       "             UD.t.i           H.i        DD.i.e        UD.i.e           H.e  \\\n",
+       "                H.t        DD.t.i        UD.t.i           H.i        DD.i.e  \\\n",
        "count  20400.000000  20400.000000  20400.000000  20400.000000  20400.000000   \n",
-       "mean       0.083358      0.081565      0.159372      0.077806      0.089138   \n",
-       "std        0.125755      0.026887      0.226928      0.228512      0.030635   \n",
-       "min       -0.162100      0.003200      0.001400     -0.160000      0.002100   \n",
-       "25%        0.027200      0.062000      0.089300      0.007400      0.068600   \n",
-       "50%        0.057800      0.077100      0.120900      0.041200      0.083400   \n",
-       "75%        0.096400      0.096900      0.173100      0.093400      0.102700   \n",
-       "max        4.799900      0.331200     25.987300     25.915800      0.325400   \n",
+       "mean       0.085727      0.169085      0.083358      0.081565      0.159372   \n",
+       "std        0.027424      0.123546      0.125755      0.026887      0.226928   \n",
+       "min        0.009300      0.001100     -0.162100      0.003200      0.001400   \n",
+       "25%        0.066000      0.113600      0.027200      0.062000      0.089300   \n",
+       "50%        0.081000      0.140400      0.057800      0.077100      0.120900   \n",
+       "75%        0.099800      0.183900      0.096400      0.096900      0.173100   \n",
+       "max        0.241100      4.919700      4.799900      0.331200     25.987300   \n",
        "\n",
        "           ...                H.a        DD.a.n        UD.a.n           H.n  \\\n",
        "count      ...       20400.000000  20400.000000  20400.000000  20400.000000   \n",
@@ -584,10 +584,10 @@
        "75%        0.103700  \n",
        "max        0.265100  \n",
        "\n",
-       "[8 rows x 31 columns]"
+       "[8 rows x 33 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,16 +624,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "subject = df.subject\n",
+    "sessionIndex = df.sessionIndex\n",
     "df = df.drop(['subject','sessionIndex', 'rep'],axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +644,7 @@
        "(20400, 31)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +754,7 @@
        "max        1.000000"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +777,7 @@
        "Name: 0, dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,10 +788,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>isAnomaly</th>\n",
+       "      <th>sessionIndex</th>\n",
+       "      <th>subject</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>s002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>s002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>s002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>s002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>s002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   isAnomaly  sessionIndex subject\n",
+       "0          1             1    s002\n",
+       "1          1             1    s002\n",
+       "2          1             1    s002\n",
+       "3          1             1    s002\n",
+       "4          1             1    s002"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred[\"sessionIndex\"] = sessionIndex\n",
+    "pred[\"subject\"] = subject\n",
+    "pred.columns = [\"isAnomaly\", 'sessionIndex',\"subject\"]\n",
+    "pred.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "subject  sessionIndex  isAnomaly\n",
+       "s002     1              1           47\n",
+       "                       -1            3\n",
+       "         2              1           50\n",
+       "         3              1           49\n",
+       "                       -1            1\n",
+       "         4              1           50\n",
+       "         5              1           48\n",
+       "                       -1            2\n",
+       "         6              1           46\n",
+       "                       -1            4\n",
+       "         7              1           47\n",
+       "                       -1            3\n",
+       "         8              1           41\n",
+       "                       -1            9\n",
+       "s003     1              1           48\n",
+       "                       -1            2\n",
+       "         2              1           43\n",
+       "                       -1            7\n",
+       "         3              1           47\n",
+       "                       -1            3\n",
+       "         4              1           45\n",
+       "                       -1            5\n",
+       "         5              1           44\n",
+       "                       -1            6\n",
+       "         6              1           43\n",
+       "                       -1            7\n",
+       "         7              1           35\n",
+       "                       -1           15\n",
+       "         8              1           39\n",
+       "                       -1           11\n",
+       "                                    ..\n",
+       "s056     1             -1           13\n",
+       "         2              1           42\n",
+       "                       -1            8\n",
+       "         3              1           50\n",
+       "         4              1           48\n",
+       "                       -1            2\n",
+       "         5              1           45\n",
+       "                       -1            5\n",
+       "         6              1           44\n",
+       "                       -1            6\n",
+       "         7              1           40\n",
+       "                       -1           10\n",
+       "         8              1           43\n",
+       "                       -1            7\n",
+       "s057     1              1           35\n",
+       "                       -1           15\n",
+       "         2              1           36\n",
+       "                       -1           14\n",
+       "         3              1           46\n",
+       "                       -1            4\n",
+       "         4              1           45\n",
+       "                       -1            5\n",
+       "         5              1           44\n",
+       "                       -1            6\n",
+       "         6              1           45\n",
+       "                       -1            5\n",
+       "         7              1           36\n",
+       "                       -1           14\n",
+       "         8              1           42\n",
+       "                       -1            8\n",
+       "Name: isAnomaly, Length: 795, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred.groupby([\"subject\",'sessionIndex']).isAnomaly.value_counts()"
+   ]
   }
  ],
  "metadata": {
